Update logger to pino

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 APP_NAME="Twiistrz DJS Bot Template"
+NODE_ENV="development"
 CLIENT_TOKEN="REPLACE-ME"
 CLIENT_ID="REPLACE-ME"
 GUILD_ID="REPLACE-ME"
