--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-	"eslint.workingDirectories": [{ "pattern": "./*" }],
+	"eslint.workingDirectories": [{ "pattern": "./" }],
 	"editor.defaultFormatter": "esbenp.prettier-vscode",
 	"editor.formatOnSave": true,
 	"editor.codeActionsOnSave": {
